# clion_protobuf_test

./: CMakeLists.txt
